Fix: responsive video on mobile<-->ipad screen

--- a/blocks/primlancers/primlancers.css
+++ b/blocks/primlancers/primlancers.css
@@ -1,21 +1,10 @@
 .primlancers {
-    padding: 80px 0 60px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding: 80px 10px 60px;
+    text-align: center;
 }
 
 .primlancers__title {
-    margin: 0;
-    font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 34px;
-    line-height: 40px;
-    text-align: center;
     letter-spacing: -0.01em;
-    text-transform: uppercase;
-    color: #683d83;
 }
 
 .title_black {
@@ -23,52 +12,47 @@
 }
 
 .primlancers__text {
-    font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 34px;
-    line-height: 40px;
     text-align: center;
     letter-spacing: -0.01em;
-    text-transform: uppercase;
-    color: #000000;
-    margin: 40px 0 0;
+    margin: 40px 0 30px;
     z-index: 1;
 }
 .primlancers__video-container {
     position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .primlancers__video {
-    min-width: 355px;
-    height: auto;
-    margin-top: 40px;
     width: 100%;
     border-radius: 20px;
-    min-height: 209px;
+    height: 55.73vw;
+    margin: 0;
 }
 .overlay {
-    max-width: 355px;
-    margin-top: 40px;
     width: 100%;
+    height: 55.73vw;
     border-radius: 20px;
-    min-height: 209px;
     background-image: url(../../images/primlancersVideoPreview.png);
     background-repeat: no-repeat;
     background-position: center;
     z-index: 0;
     position: absolute;
-    background-size: cover;
+    background-size: 101.66vw 63.73vw;
+    margin: 0;
 }
 
 .overlay:before {
     content: "";
-    min-width: 355px;
+    height: 55.73vw;
     width: 100%;
     border-radius: 20px;
-    min-height: 209px;
     background: rgba(0, 0, 0, 0.5);
     position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .primlancers__video-button {
@@ -77,7 +61,6 @@
     left: 50%;
     width: 0;
     height: 0;
-    margin: -27px 0 0px -16px;
 }
 
 .primlancers__video-button:before {
@@ -141,7 +124,6 @@
     color: #ffffff;
     background-color: #683d83;
     border-radius: 10px;
-    margin-top: 30px;
     border: none;
     cursor: pointer;
 }
@@ -153,11 +135,31 @@
 }
 
 @media (min-width: 768px) {
+    .primlancers {
+        padding: 100px 40px 80px;
+    }
+
+    .primlancers__video {
+        max-width: 860px;
+        max-height: 449px;
+    }
+
+    .overlay {
+        max-width: 860px;
+        height: 100%;
+        background-size: auto;
+        max-height: 451px;
+    }
+    .overlay:before {
+        max-width: 860px;
+        max-height: 449px;
+        height: 100%;
+    }
 }
 
 @media (min-width: 1024px) {
     .primlancers {
-        padding: 100px 0 80px;
+        padding: 100px 88px 80px;
     }
 
     .primlancers__title {
@@ -165,42 +167,16 @@
         line-height: 59px;
     }
 
-    .primlancers__video-container {
-        max-height: 510px;
-    }
-
-    .primlancers__video {
-        max-width: 100%;
-        min-height: 449px;
-        min-width: 860px;
-        margin-top: 60px;
-    }
-
     .primlancers__text {
         font-size: 38px;
         line-height: 45px;
         color: #ffffff;
         position: relative;
-        top: -200px;
+        top: -188px;
     }
 
     .primlancers__book-button {
-        margin-top: 60px;
-    }
-    .overlay {
-        max-width: 860px;
-        height: 100%;
-        margin-top: 34px;
-        min-height: 449px;
-        background-size: auto;
-    }
-    .overlay:before {
-        max-width: 860px;
-        margin-top: 27px;
-        min-height: 449px;
-    }
-    .primlancers__video-button {
-        margin: 23px 0 0 -16px;
+        margin-top: -60px;
     }
 }
 
